--- a/ADMFacturar/Views/Facturas/AgregarNC.cshtml
+++ b/ADMFacturar/Views/Facturas/AgregarNC.cshtml
@@ -44,7 +44,7 @@
                         <option value="Daño">Daño</option>
                     </select>
                 </div>
-                <div class="relative">
+                <div class="relative col-span-2">
                     <label for="Comentario" class="block text-sm font-medium leading-6 text-white">Comentario</label>
                     <div class="flex">
                         <input type="text" id="Comentario" name="Comentario" class="mt-1 block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white placeholder-gray-400 focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
