--- a/ADMFacturar/Views/Proveedores/Index.cshtml
+++ b/ADMFacturar/Views/Proveedores/Index.cshtml
@@ -91,7 +91,7 @@
 								<td>
 									<div class="flex justify-center space-x-2">
 										<div class="flex justify-center space-x-2">
-											<a asp-action="ActualizarProveedor" asp-route-PK="@proveedor.PK_Proveedor" class="text-blue-600 hover:text-blue-900" title="Editar">
+											<a onclick="ActuVarProveedor('@proveedor.PK_Proveedor')" class="text-blue-600 hover:text-blue-900" title="Editar">
 												<i class="fas fa-edit"></i>
 											</a>
 
@@ -173,7 +173,57 @@
 	</div>
 	<!--                  Final Modal de Crear Tempalte                        -->
 	<!--                  Modal de Actualizar Template                        -->
-	
+	<div id="modalActuProveedor" class="modal">
+		<div class="modal-content">
+			<form asp-action="ActualizarProveedor" method="post" class="max-w-4xl mx-auto p-6 bg-gray-800 rounded-md" id="formupdate">
+				<div class="border-b border-gray-700 pb-6">
+					<h2 class="text-lg font-semibold leading-7 text-white">Actualizar Proveedor</h2>
+				</div>
+				<div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+					<div class="sm:col-span-2">
+						<label for="Nombre" class="block text-sm font-medium text-gray-300">Nombre</label>
+						<div class="mt-2">
+							<input asp-for="Nombre" type="text" id="nombre" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+						</div>
+					</div>
+					<div class="sm:col-span-2">
+						<label for="Telefono" class="block text-sm font-medium text-gray-300">Teléfono</label>
+						<div class="mt-2">
+							<input asp-for="Telefono" type="text" id="tel" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+						</div>
+					</div>
+					<div class="sm:col-span-2">
+						<label for="Correo" class="block text-sm font-medium text-gray-300">Correo</label>
+						<div class="mt-2">
+							<input asp-for="Correo" type="text" id="email" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+						</div>
+					</div>
+					<div class="sm:col-span-2">
+						<label for="Direccion" class="block text-sm font-medium text-gray-300">Dirección</label>
+						<div class="mt-2">
+							<input asp-for="Direccion" type="text" id="direccion" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+						</div>
+					</div>
+					<div class="sm:col-span-2">
+						<label for="Estado" class="block text-sm font-medium text-gray-300">Estado</label>
+						<div class="mt-2">
+							<select asp-for="Estado" id="state" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+								<option value="true">Activo</option>
+								<option value="false">Inactivo</option>
+							</select>
+						</div>
+					</div>
+				</div>
+				<div class="mt-6 flex justify-end gap-x-4">
+					<input asp-for="PK_Proveedor" type="text" id="pKProveedor" type="hidden" />
+					<input asp-for="FK_Usuario_Creacion" value="1" id="fkUserCrea" type="hidden" />
+					<input asp-for="FK_Usuario_Modificacion" value="1" id="fkUserModif" type="hidden" />
+					<button type="submit" id="btnActu" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
+					<button asp-action="Index" class="rounded-md bg-red-600 px-4 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus:ring-2 focus:ring-red-500">Cancelar</button>
+				</div>
+			</form>
+		</div>
+	</div>
 
 	<!--                  Final Modal de Actualizar Tempalte                        -->
 
@@ -261,6 +311,135 @@
 					});
 			}
 		});
+
+		/* Metodo de actualizar Proveedor
+		Incorporado el 19/7/24 por Joseth Araya
+		*/
+		document.getElementById('btnActu').addEventListener('click', function (event) {
+			event.preventDefault(); // Detener el envío normal del formulario
+
+			// Validar campos requeridos
+			var PKProveedor = document.getElementById('pKProveedor').value;
+			var nombre = document.getElementById('nombre').value;
+			var telefono = document.getElementById('tel').value;
+			var correo = document.getElementById('email').value;
+			var direccion = document.getElementById('direccion').value;
+			var estado = document.getElementById('state').value;
+			var FKUsuarioCrea = document.getElementById('fkUserCrea').value;
+			var FKUsuarioActu = document.getElementById('fkUserModif').value;
+
+			if (!nombre || !telefono || !correo || !direccion || !estado) {
+				// Mostrar mensaje de error con SweetAlert2 si no están completos los campos
+				Swal.fire({
+					icon: 'error',
+					title: 'Error',
+					text: 'Por favor complete todos los campos requeridos.',
+					confirmButtonColor: '#3085d6',
+					cancelButtonColor: '#d33',
+					confirmButtonText: 'OK'
+				});
+			} else {
+				// Crear objeto FormData con los datos del formulario
+				var formData = new FormData(document.getElementById('formupdate'));
+
+				// Enviar los datos al controlador utilizando fetch
+				fetch('/Proveedores/ActualizarProveedor', {
+					method: 'POST',
+					body: formData
+				})
+					.then(response => {
+						if (response.ok) {
+							// Mostrar mensaje de éxito con SweetAlert2
+							Swal.fire({
+								icon: 'success',
+								title: 'Guardado Correctamente',
+								showConfirmButton: true,
+								confirmButtonColor: '#3085d6',
+								confirmButtonText: 'OK'
+							}).then((result) => {
+								// Redirigir a la página de índice de proveedores después de guardar
+								window.location.href = '/Proveedores/Index';
+							});
+						} else {
+							throw new Error('Error al guardar los datos');
+						}
+					})
+					.catch(error => {
+						// Mostrar mensaje de error con SweetAlert2
+						Swal.fire({
+							icon: 'error',
+							title: 'Error',
+							text: error.message,
+							confirmButtonColor: '#3085d6',
+							cancelButtonColor: '#d33',
+							confirmButtonText: 'OK'
+						});
+					});
+			}
+		});
+
+
+		/*Cargar Datos Modal
+		 Incorporado el 19/7/24 por Joseth Araya
+		*/
+
+		function ActuVarProveedor(PK) {
+			console.log("Respuesta   " + PK);
+			fetch(`/Proveedores/ObtenerProveedor?PK=${PK}`, {
+				method: 'GET'
+			})
+				.then(response => {
+					if (response.ok) {
+						return response.json();
+					} else {
+						throw new Error('Error al obtener el proveedor');
+					}
+				})
+				.then(data => {
+					console.log('Datos del proveedor:', data);
+
+					/*Seccion dwe prubas*/
+					console.log('Datos del pkProveedor:', data.pK_Proveedor);
+					console.log('Datos del nombre:', data.nombre);
+					console.log('Datos del telefono:', data.telefono);
+					console.log('Datos del correo:', data.correo);
+					console.log('Datos del direccion:', data.direccion);
+					console.log('Datos del estado:', data.estado);
+					console.log('Datos del fkUsuarioCreacion:', data.fkUsuarioCreacion);
+					console.log('Datos del fkUsuarioModificacion:', data.fkUsuarioModificacion);
+
+					// Asignación de datos al modal
+					document.getElementById('pKProveedor').value = data.pK_Proveedor;
+					document.getElementById('nombre').value = data.nombre;
+					document.getElementById('tel').value = data.telefono;
+					document.getElementById('email').value = data.correo;
+					document.getElementById('direccion').value = data.direccion;
+					document.getElementById('state').value = data.estado.toString().toLowerCase();
+					// if (data.fK_Usuario_Creacion.toString() != null) {
+					// 	document.getElementById('fkUserCrea').value = data.fK_Usuario_Creacion.toString();
+					// }
+					// if (data.fK_Usuario_Modificacion.toString() != null) {
+					// 	document.getElementById('fkUserModif').value = data.fK_Usuario_Modificacion.toString();
+					// }
+					
+
+					// Abrir el modal de actualización
+					abrirModal('modalActuProveedor');
+				})
+				.catch(error => {
+					// Mostrar mensaje de error con SweetAlert2 u otra forma
+					console.error('Error:', error);
+					Swal.fire({
+						icon: 'error',
+						title: 'Error',
+						text: 'Error al obtener los datos del proveedor',
+						confirmButtonColor: '#3085d6',
+						cancelButtonColor: '#d33',
+						confirmButtonText: 'OK'
+					});
+				});
+		}
+
 
 		//   <!--Inicio Validacion boton eliminar-- >
 
