--- a/ADMFacturar/Views/Facturas/DetallesNC.cshtml
+++ b/ADMFacturar/Views/Facturas/DetallesNC.cshtml
@@ -40,8 +40,8 @@
                 <div>
                     <label for="motivo" class="block text-sm font-medium leading-6 text-white">Motivo</label>
                     <select id="motivo" name="motivo" class="mt-1 block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 37px;" disabled>
-                        <option value="Devolucion" selected="@Model.Encabezado.Consecutivo == " Devolucion"">Devolución</option>
-                        <option value="Daño" selected="@Model.Encabezado.Consecutivo == " Daño"">Daño</option>
+                        <option value="Devolucion" selected="@Model.Encabezado.motivo == "Devolucion">Devolución</option>
+                        <option value="Daño" selected="@Model.Encabezado.motivo == "Daño">Daño</option>
                     </select>
                 </div>
                 <div class="relative col-span-2">
