--- a/ADMFacturar/Views/Facturas/Index.cshtml
+++ b/ADMFacturar/Views/Facturas/Index.cshtml
@@ -85,28 +85,28 @@
                 tableBody.innerHTML = '';
                 data.forEach(item => {
                     const row = `
-                                     <tr class="even:bg-gray-700 hover:bg-gray-600">
-                                        <td class="py-3 px-4 text-center">${item.documento}</td>
-                                        <td class="py-3 px-4 text-center">${item.fac_Referencia}</td>
-                                        <td class="py-3 px-4 text-center">${item.tipoDoc}</td>
-                                        <td class="py-3 px-4 text-center">${item.fecha}</td>
-                                        <td class="py-3 px-4 text-center">${item.cliente}</td>
-                                        <td class="py-3 px-4 text-center">₡${item.total}</td>
-                                        <td class="py-3 px-4 text-center flex justify-center space-x-2">
-                                            ${item.tipoDoc !== 'Nota de Crédito' ? `
-                                            <button class="crear-nota-credito bg-blue-500 hover:bg-blue-600 text-white py-1 px-3 rounded" title="Crear nota de Crédito" data-estado="${item.estado}" data-documento="${item.documento}" data-referencia="${item.fac_Referencia}">
-                                                <i class="fas fa-credit-card"></i>
-                                            </button>
-                                            ` : ''}
-                                            <button class="ver-detalles bg-green-500 hover:bg-green-600 text-white py-1 px-3 rounded" title="Detalles" data-documento="${item.documento}">
-                                                <i class="fas fa-eye"></i>
-                                            </button>
-                                            <button class="bg-indigo-500 hover:bg-indigo-600 text-white py-1 px-3 rounded" title="Imprimir">
-                                                <i class="fas fa-print"></i>
-                                            </button>
-                                        </td>
-                                    </tr>
-                                `;
+                            <tr class="even:bg-gray-700 hover:bg-gray-600">
+                                <td class="py-3 px-4 text-center">${item.documento}</td>
+                                <td class="py-3 px-4 text-center">${item.fac_Referencia}</td>
+                                <td class="py-3 px-4 text-center">${item.tipoDoc}</td>
+                                <td class="py-3 px-4 text-center">${item.fecha}</td>
+                                <td class="py-3 px-4 text-center">${item.cliente}</td>
+                                <td class="py-3 px-4 text-center">₡${item.total}</td>
+                                <td class="py-3 px-4 text-center flex justify-center space-x-2">
+                                    ${item.tipoDoc !== 'Nota de Crédito' ? `
+                                    <button class="crear-nota-credito bg-blue-500 hover:bg-blue-600 text-white py-1 px-3 rounded" title="Crear nota de Crédito" data-estado="${item.estado}" data-documento="${item.documento}" data-referencia="${item.fac_Referencia}">
+                                        <i class="fas fa-credit-card"></i>
+                                    </button>
+                                    ` : ''}
+                                    <button class="ver-detalles bg-green-500 hover:bg-green-600 text-white py-1 px-3 rounded" title="Detalles" data-documento="${item.documento}" data-tipodoc="${item.tipoDoc}">
+                                        <i class="fas fa-eye"></i>
+                                    </button>
+                                    <button class="bg-indigo-500 hover:bg-indigo-600 text-white py-1 px-3 rounded" title="Imprimir">
+                                        <i class="fas fa-print"></i>
+                                    </button>
+                                </td>
+                            </tr>
+                        `;
                     tableBody.innerHTML += row;
                 });
 
@@ -200,7 +200,12 @@
         if (event.target.closest('.ver-detalles')) {
             const button = event.target.closest('.ver-detalles');
             const documento = button.getAttribute('data-documento');
-            window.location.href = `/Facturas/DetallesNC?documento=${documento}`;
+            const tipoDoc = button.getAttribute('data-tipodoc');
+            if (tipoDoc === 'Nota de Crédito') {
+                window.location.href = `/Facturas/DetallesNC?documento=${documento}`;
+            } else if (tipoDoc === 'Factura') {
+                window.location.href = `/Facturas/DetallesFactura?documento=${documento}`;
+            }
         }
     });
 </script>
