--- a/ADMFacturar/Views/CXP/Index.cshtml
+++ b/ADMFacturar/Views/CXP/Index.cshtml
@@ -94,6 +94,7 @@
                         <th class="py-3 px-4 text-center">Documento</th>
                         <th class="py-3 px-4 text-center">Proveedor</th>
                         <th class="py-3 px-4 text-center">Fecha Emisión</th>
+                        <th class="py-3 px-4 text-center">Fecha Vence</th>
                         <th class="py-3 px-4 text-center">Total</th>
                         <th class="py-3 px-4 text-center">Saldo</th>
                         <th class="py-3 px-4 text-center">Acciones</th>
@@ -108,6 +109,7 @@
                                 <td class="py-3 px-4 border-b border-gray-700">@Html.DisplayFor(modelItem => cxp.PK_Documento)</td>
                                 <td class="py-3 px-4 border-b border-gray-700">@Html.DisplayFor(modelItem => cxp.NombreProveedor)</td>
                                 <td class="py-3 px-4 border-b border-gray-700">@Html.Raw(cxp.Fecha_Documento.ToString("yyyy-MM-dd"))</td>
+                                <td class="py-3 px-4 border-b border-gray-700 fecha-vencimiento">@Html.Raw(cxp.Fecha_Vence.ToString("yyyy-MM-dd"))</td>
                                 <td class="py-3 px-4 border-b border-gray-700">@Html.DisplayFor(modelItem => cxp.Monto)</td>
                                 <td class="py-3 px-4 border-b border-gray-700">@Html.DisplayFor(modelItem => cxp.Saldo_Pendiente)</td>
                                 <td>
@@ -122,6 +124,12 @@
                                 </td>
                             </tr>
                         }
+                    }
+                    else
+                    {
+                        <tr>
+                            <td colspan="14">No hay datos disponibles.</td>
+                        </tr>
                     }
                 </tbody>
             </table>
@@ -205,6 +213,25 @@
         //              }
         //          });
         //      });
+
+        document.addEventListener("DOMContentLoaded", function () {
+            const fechaActual = new Date();
+            const celdasFechaVence = document.querySelectorAll('.fecha-vencimiento');
+
+            celdasFechaVence.forEach(celda => {
+                const fechaVence = new Date(celda.textContent.trim());
+                const diffTime = fechaVence - fechaActual;
+                const diffDays = Math.ceil(diffTime / (1000 * 60 * 60 * 24));
+
+                if (diffDays < 0) {
+                    celda.style.color = 'red';
+                } else if (diffDays < 7) {
+                    celda.style.color = 'yellow';
+                } else if (diffDays > 15) {
+                    celda.style.color = 'green';
+                }
+            });
+        });
     </script>
 </body>
 </html>
